# mimiclaw

./: README.md  README_CN.md  README_JA.md  sdkconfig.defaults.esp32s3
.github/workflows/: release.yml
.kiro/specs/remove-telegram-channel/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: architecture-patterns.md  code-style.md  development-workflow.md  product.md  structure.md  tech.md  testing-debugging.md
docs/: ARCHITECTURE.md  TODO.md  WIFI_ONBOARDING_AP.md
docs/im-integration/: FEISHU_SETUP.md
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  context_builder.c
main/bus/: message_bus.h
main/cli/: recovery_cli.c  recovery_cli.h  serial_cli.c
main/cron/: cron_service.c
main/hardware/: audio_hal_input.c  audio_hal_input.h  audio_hal_output.c  audio_hal_output.h  button_service.c  button_service.h  display_hal.c  display_hal.h  display_locale.c  display_locale.h  display_state.c  display_state.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: session_mgr.c  session_mgr.h
main/onboard/: onboard_html.h  wifi_onboard.c
main/skills/: skill_loader.c
main/tools/: tool_cron.c  tool_display.c  tool_display.h  tool_get_time.c  tool_led.c  tool_led.h  tool_registry.c
main/voice/: voice_channel.c  voice_channel.h
main/wifi/: wifi_manager.c
skills/deploy/: SKILL.md
skills/deploy/scripts/: validate.sh
skills/led/: LED_EFFECTS.md  LED_IMPLEMENTATION.md  LED_RGB.md
spiffs_data/skills/: display-control.md  gpio-control.md  index.txt  led-control.md
